[package]
authors = ["Pendulum"]
edition = "2021"
name = "module-pallet-staking-rpc-runtime-api"
version = "1.6.0-c"

[dependencies]
frame-support = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
module-oracle-rpc-runtime-api = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp-arithmetic = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "frame-support/std",
    "scale-info/std",
    "sp-api/std",
    "sp-std/std",
    "parity-scale-codec/std",
    "module-oracle-rpc-runtime-api/std",
    "sp-arithmetic/std"
]
